# ThoraxAI

./: LICENSE  README.md  main.py  pneumonia_detector.py  pyproject.toml  requirements.txt
assets/: snippet.txt
ipynb/: Balancing_Pneumonia_Data.ipynb  Pneumonia_detection.ipynb
