[project]
name = "thoraxai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "altair==5.4.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==2.4.1",
    "astunparse==1.6.3",
    "async-lru==2.0.4",
    "attrs==24.2.0",
    "babel==2.16.0",
    "bleach==6.2.0",
    "blinker==1.8.2",
    "blis==1.0.1",
    "cachetools==5.5.0",
    "catalogue==2.0.10",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "cinemagoer==2023.5.1",
    "click==8.1.7",
    "cloudpathlib==0.20.0",
    "comm==0.2.2",
    "confection==0.1.5",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "cymem==2.0.8",
    "debugpy==1.8.8",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "executing==2.1.0",
    "fastjsonschema==2.20.0",
    "flatbuffers==24.3.25",
    "fonttools==4.55.0",
    "fqdn==1.5.1",
    "gast==0.6.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "google-pasta==0.2.0",
    "greenlet==3.1.1",
    "grpcio==1.68.0",
    "h11==0.14.0",
    "h5py==3.12.1",
    "httpcore==1.0.7",
    "httpx==0.27.2",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.29.0",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "json5==0.9.28",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.10.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.14.2",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.2.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.13",
    "kaggle==1.6.17",
    "keras==3.7.0",
    "kiwisolver==1.4.7",
    "langcodes==3.4.1",
    "language-data==1.2.0",
    "libclang==18.1.1",
    "lxml==5.3.0",
    "marisa-trie==1.2.1",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "ml-dtypes==0.4.1",
    "murmurhash==1.0.10",
    "namex==0.0.8",
    "narwhals==1.12.1",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.2.2",
    "notebook-shim==0.2.4",
    "numpy==2.0.2",
    "opt-einsum==3.4.0",
    "optree==0.13.1",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "preshed==3.0.9",
    "prometheus-client==0.21.0",
    "prompt-toolkit==3.0.48",
    "protobuf==5.28.3",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==18.0.0",
    "pycparser==2.22",
    "pydantic==2.10.1",
    "pydantic-core==2.27.1",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.17",
    "python-slugify==8.0.4",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.3",
    "rpds-py==0.20.1",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "setuptools==75.6.0",
    "shellingham==1.5.4",
    "six==1.16.0",
    "smart-open==7.0.5",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "spacy==3.8.2",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlalchemy==2.0.36",
    "srsly==2.4.8",
    "stack-data==0.6.3",
    "starlette==0.41.2",
    "statsmodels==0.14.4",
    "streamlit==1.39.0",
    "tenacity==9.0.0",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.18.0",
    "termcolor==2.5.0",
    "terminado==0.18.1",
    "text-unidecode==1.3",
    "tf-keras>=2.18.0",
    "thinc==8.3.2",
    "threadpoolctl==3.5.0",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tornado==6.4.1",
    "tqdm==4.66.6",
    "traitlets==5.14.3",
    "typer==0.12.5",
    "types-python-dateutil==2.9.0.20241003",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "uvicorn==0.32.0",
    "wasabi==1.1.3",
    "watchdog==5.0.3",
    "wcwidth==0.2.13",
    "weasel==0.4.1",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.0",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.13",
    "wrapt==1.16.0",
]
